@@ -1,0 +1,18 @@
+name: iOS Build
+
+on:
+  push:
+    branches: [ main, codex/**, final-release ]
+  pull_request:
+
+jobs:
+  build:
+    runs-on: macos-14
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install XcodeGen
+        run: brew install xcodegen
+      - name: Generate project
+        run: xcodegen generate
+      - name: Build
+        run: xcodebuild -project AstroStackerPro.xcodeproj -scheme AstroStackerPro -destination 'generic/platform=iOS' clean build
