@@ -19,18 +19,11 @@ final class RAWPhotoDelegate: NSObject, AVCapturePhotoCaptureDelegate {
             req.addResource(with: .photo, data: data, options: options)
         }, completionHandler: nil)
 
-        // Salva anche su iCloud Drive se disponibile
-        if FileManager.default.ubiquityIdentityToken != nil,
-           let ubiURL = FileManager.default.url(forUbiquityContainerIdentifier: nil)?.appendingPathComponent("Documents/") {
-            let name = UUID().uuidString
-            let fileURL = ubiURL.appendingPathComponent(name).appendingPathExtension("dng")
-            try? FileManager.default.createDirectory(at: ubiURL, withIntermediateDirectories: true)
-            try? data.write(to: fileURL)
-
-            // Metadata JSON di supporto
-            if let jsonData = try? JSONSerialization.data(withJSONObject: photo.metadata, options: .prettyPrinted) {
-                let jsonURL = fileURL.deletingPathExtension().appendingPathExtension("json")
-                try? jsonData.write(to: jsonURL)
+        // Salva anche su iCloud Drive se disponibile (metadata TODO)
+        CloudExporter.export(data, fileName: UUID().uuidString + ".dng", toICloud: FileManager.default.ubiquityIdentityToken != nil) { url in
+            if let url, let json = try? JSONSerialization.data(withJSONObject: photo.metadata, options: .prettyPrinted) {
+                let metaURL = url.deletingPathExtension().appendingPathExtension("json")
+                try? json.write(to: metaURL)
             }
         }
     }
