@@ -1,0 +1,6 @@
+{
+  "type": "FeatureCollection",
+  "features": [
+    {"type": "Feature", "properties": {"sqm": 20}, "geometry": {"type": "Point", "coordinates": [9.19, 45.4642]}}
+  ]
+}
